@@ -4,6 +4,9 @@ Changelog
 1.4.3 - unreleased
 ------------------
 
+- Fix handling of relative links instead of relying on Acquisition.
+  [witsch]
+
 
 1.4.2 - 2011-07-04
 ------------------
@@ -12,10 +15,12 @@ Changelog
   This fixes http://dev.plone.org/plone/ticket/11904.
   [WouterVH]
 
-- Fix tests broken by r50608.
+- Adjust tests to the changed URL used for the `folder_contents` view.
+  This refs http://dev.plone.org/plone/ticket/10122.
   [gotcha]
 
-- Add new tests to prove isLinked can now be used safely.
+- Add new tests to prove `isLinked` can now be used safely.
+  This refs http://dev.plone.org/plone/ticket/7784.
   [gotcha]
 
 
